	* src/universal-cp-eventtreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:
	* src/universal-cp.c:
	* src/universal-cp.h:

	Fix the copyright header.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Fix a device proxy ref leak.

2007-09-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/av-cp-gui.c:
	* src/av-cp-gui.h:
	* src/av-cp-playlisttreeview.c:
	* src/av-cp-playlisttreeview.h:
	* src/av-cp.c:
	* src/av-cp.h:
	* src/gupnp-av-cp.glade:

	Basic skeleton for AV Control Point.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	English corrections by Robert McQueen.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* NEWS:

	Update the NEWS file for 0.2 release.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-actiondialog.h:
	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	Some more object ref leakage fixes.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-gui.c:

	Set the version string on the about dialogs.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Bump up the version to 0.2.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* README:
	
	Update the README.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Quit menuitem calls application_exit() instead of gtk_main_quit() on
	activation.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	- Explicitly destroy the main window.
	- Don't leak the treemodels.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp.c:
