@@ -52,6 +52,13 @@
 
 2007-09-19  Zeeshan Ali  <zeenix@gstreamer.net>
 
+	* src/av-cp-gui.c:
+
+	- Make about-dialog public static member of the gui module.
+	- Destroy the about-dialog while the gui module de-initializes.
+
+2007-09-19  Zeeshan Ali  <zeenix@gstreamer.net>
+
 	* src/Makefile.am:
 	* src/av-cp-gui.c:
 	* src/av-cp-gui.h:
